// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=611cf1926c28415ef007",
    194,
    {
      "fullhash": "611cf1926c28415ef007",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4028,
    {
      "compressed": true,
      "immutable": true,
      "size": 4028,
    },
  ],
  [
    "main.js?var=611cf1926c28415ef007",
    16209,
    {
      "fullhash": "611cf1926c28415ef007",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16209,
    },
  ],
]
`;

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): errors 1`] = `[]`;

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): warnings 1`] = `[]`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=611cf1926c28415ef007",
    194,
    {
      "fullhash": "611cf1926c28415ef007",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4028,
    {
      "compressed": true,
      "immutable": true,
      "size": 4028,
    },
  ],
  [
    "main.js?var=611cf1926c28415ef007",
    16209,
    {
      "fullhash": "611cf1926c28415ef007",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16209,
    },
  ],
]
`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): errors 1`] = `[]`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): warnings 1`] = `[]`;
